Updated explanatory text in notebook

--- a/EE-Extract-Landsat8-CHAI-Covariates.ipynb
+++ b/EE-Extract-Landsat8-CHAI-Covariates.ipynb
@@ -31,7 +31,8 @@
     "First you need a google account that's whitelisted to use Earth Engine. This is straightforward - just send a request using the links on the Earth Engine homepage (and your own Google account).\n",
     "\n",
     "Next, instructions for installing and authenticating the API  manually are here:\n",
-    "https://developers.google.com/earth-engine/python_install_manual\n",
+    "https://developers.google.com/earth-engine/python_install_manual. Also see here for some further instructions on authorisation: https://github.com/google/earthengine-api/blob/master/python/examples/ipynb/authorize_notebook_server.ipynb\n",
+    "\n",
     "Or you can use a hosted or a local Docker deployment with everything set up. Instructions here: https://developers.google.com/earth-engine/python_install\n",
     "\n"
    ]
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 256,
    "metadata": {
     "collapsed": false
    },
@@ -122,15 +123,15 @@
    "source": [
     "# Specify the years from which to harvest landsat 8 data, all the data from these years will be used \n",
     "# to create the seasonal composites which are then averaged\n",
-    "yrStart = 2014;\n",
-    "yrEnd = 2016;\n",
+    "yrStart = 2016;\n",
+    "yrEnd = 2017;\n",
     "\n",
     "# Specify whether to output a file for each year in the range or one averaged file\n",
-    "summariseToSynoptic = True;\n",
+    "summariseToSynoptic = False;\n",
     "\n",
     "# Specify the country to export data for as an ISO3 code. The export will cover the bounding box \n",
     "# of this country with a 10km buffer to allow for data discrepancies.\n",
-    "ISO3_TO_EXPORT = \"GTM\";\n",
+    "ISO3_TO_EXPORT = \"MOZ\";\n",
     "\n",
     "# Export resolution in metres (so, in WGS84 the output resolution will vary with latitude)\n",
     "EXPORT_RES_M = 100;\n",
@@ -171,7 +172,7 @@
    "metadata": {},
    "source": [
     "### Code setup\n",
-    "Run all the following cells until the next note."
+    "Run all the following cells until the next note, to define the required functions"
    ]
   },
   {
@@ -666,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 257,
    "metadata": {
     "collapsed": false
    },
@@ -698,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 258,
    "metadata": {
     "collapsed": false
    },
@@ -706,10 +707,26 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<Task EXPORT_IMAGE: MOZ-elev-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcb-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcw-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcg-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-evi-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-ndvi-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp10-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp11-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-chirps-2016-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcb-2017-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcw-2017-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcg-2017-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-evi-2017-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-ndvi-2017-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp10-2017-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp11-2017-exp (UNSUBMITTED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-chirps-2017-exp (UNSUBMITTED)>]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 261,
    "metadata": {
     "collapsed": false
    },
@@ -736,15 +753,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GTM-elev-exp\n",
-      "GTM-tcb-2014-2016-exp\n",
-      "GTM-tcw-2014-2016-exp\n",
-      "GTM-tcg-2014-2016-exp\n",
-      "GTM-evi-2014-2016-exp\n",
-      "GTM-ndvi-2014-2016-exp\n",
-      "GTM-lsTemp10-2014-2016-exp\n",
-      "GTM-lsTemp11-2014-2016-exp\n",
-      "GTM-chirps-2014-2016-exp\n"
+      "MOZ-elev-exp\n",
+      "MOZ-tcb-2016-exp\n",
+      "MOZ-tcw-2016-exp\n",
+      "MOZ-tcg-2016-exp\n",
+      "MOZ-evi-2016-exp\n",
+      "MOZ-ndvi-2016-exp\n",
+      "MOZ-lsTemp10-2016-exp\n",
+      "MOZ-lsTemp11-2016-exp\n",
+      "MOZ-chirps-2016-exp\n",
+      "MOZ-tcb-2017-exp\n",
+      "MOZ-tcw-2017-exp\n",
+      "MOZ-tcg-2017-exp\n",
+      "MOZ-evi-2017-exp\n",
+      "MOZ-ndvi-2017-exp\n",
+      "MOZ-lsTemp10-2017-exp\n",
+      "MOZ-lsTemp11-2017-exp\n",
+      "MOZ-chirps-2017-exp\n"
      ]
     }
    ],
@@ -765,7 +790,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -776,12 +801,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or re-retrieve them from the server - showing any others that are still recorded not just those that have just been built"
+    "or re-retrieve them from the server - which will also show any other older tasks that are still recorded not just those that have just been created"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 270,
    "metadata": {
     "collapsed": false
    },
@@ -792,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 271,
    "metadata": {
     "collapsed": false
    },
@@ -800,7 +825,24 @@
     {
      "data": {
       "text/plain": [
-       "[<Task EXPORT_IMAGE: GTM-chirps-2014-2016-exp (COMPLETED)>,\n",
+       "[<Task EXPORT_IMAGE: MOZ-chirps-2017-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp11-2017-exp (FAILED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp10-2017-exp (FAILED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-ndvi-2017-exp (FAILED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-evi-2017-exp (FAILED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcg-2017-exp (FAILED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcw-2017-exp (FAILED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcb-2017-exp (FAILED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-chirps-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp11-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-lsTemp10-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-ndvi-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-evi-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcg-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcw-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-tcb-2016-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: MOZ-elev-exp (COMPLETED)>,\n",
+       " <Task EXPORT_IMAGE: GTM-chirps-2014-2016-exp (COMPLETED)>,\n",
        " <Task EXPORT_IMAGE: GTM-lsTemp11-2014-2016-exp (COMPLETED)>,\n",
        " <Task EXPORT_IMAGE: GTM-lsTemp10-2014-2016-exp (COMPLETED)>,\n",
        " <Task EXPORT_IMAGE: GTM-ndvi-2014-2016-exp (COMPLETED)>,\n",
@@ -971,7 +1013,7 @@
        " <Task EXPORT_IMAGE: chirpsMean (COMPLETED)>]"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
