--- a/EE-Extract-Landsat8-CHAI-Covariates.ipynb
+++ b/EE-Extract-Landsat8-CHAI-Covariates.ipynb
@@ -48,10 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Attempt to load the EE API\n",
@@ -61,10 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -82,10 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -93,7 +87,7 @@
        "'0.1.164'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,10 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Landsat 8 - only available from 2014 onwards\n",
@@ -141,10 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ls8_to_use = ls8_raw_new"
@@ -159,10 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -181,10 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# CHIRPS rainfall\n",
@@ -201,10 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Hydrosheds DTM is gapfilled and corrected relative to the raw SRTM\n",
@@ -223,10 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Not the best set of national boundaries but the only one I can find already in EE and ok for a bbox\n",
@@ -249,16 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Specify the years from which to harvest landsat 8 data, all the data from these years will be used \n",
     "# to create th seasonal composites which are then averaged\n",
     "yrStart = 2017\n",
-    "yrEnd = 2018\n",
+    "yrEnd = 2017\n",
     "\n",
     "# Specify whether to output a file for each year in the range or one averaged file\n",
     "summariseToSynoptic = False\n",
@@ -278,10 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "RUN_ELEV_SRTM = False\n",
@@ -301,10 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -327,10 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -431,10 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# name to prepend to the filenames we export\n",
@@ -459,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -497,10 +469,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# PROBABLY DON'T NEED TO CHANGE ANYTHING IN THIS CELL\n",
@@ -522,10 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get the server-side version of the geometry and remove it from the export config dictionary\n",
@@ -534,10 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -545,7 +511,7 @@
        "'Polygon'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,10 +522,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# pre-filter the collection to only include scenes that cover the area of interest.\n",
@@ -571,16 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1985\n"
+      "2153\n"
      ]
     }
    ],
@@ -590,10 +552,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# A function to compute Enhanced Vegetation Index (EVI)  on Landsat 8 imagery\n",
@@ -622,10 +582,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# A function to compute Tasseled Cap Brightness (TCB) on Landsat 8 imagery\n",
@@ -666,10 +624,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# A function to compute Tasseled Cap Greenness (TCG) on Landsat 8 imagery\n",
@@ -708,10 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# A function to compute Tasseled Cap Wetness (TCW) on Landsat 8 imagery\n",
@@ -751,10 +705,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Map MODIS MCD12Q1 landcover to emissivity for use in calculating land surface temperature \n",
@@ -790,10 +742,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Estimate Land Surface Temperature from (separately) bands 10 and 11 of the landsat image \n",
@@ -837,10 +787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Estimate Land Surface Temperature from (separately) bands 10 and 11 of the landsat image \n",
@@ -881,10 +829,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a series from the MODIS LST dataset which only contains the Emissivity bands, \n",
@@ -902,10 +848,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Function to calculate evi, tcb, tcg, tcw, lst10, lst11 for a single landsat 8 image,\n",
@@ -950,10 +894,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Functions to calculate a composite image from the landsat 8 image stack for the dates in question.\n",
@@ -966,27 +908,127 @@
     "# It has to be this way round for the compositor, which is designed to work just on Landsat imagery. It won't work if \n",
     "# we add the indices to the incoming images first.\n",
     "\n",
-    "# The returned image is calculated from the the best available data for the period given - thus each pixel may \n",
+    "# The returned image is calculated from the the best available data for the period (collection) given - thus each pixel may \n",
     "# be from a totally different time of year. The pixels are selected using the simple cloud-avoiding compositor \n",
     "# function for all source images occurring in the specified years. The image has the evi, ndvi, \n",
     "# etc bands added.\n",
-    "def landsatAnnualSummary(yrFrom, yrTo):\n",
+    "\n",
+    "def landsatComposite(collection):\n",
+    "    imgLS = ee.Algorithms.Landsat.simpleComposite(**{\n",
+    "        'collection': collection,\n",
+    "        'percentile': LS_CLOUD_PERCENTILE,\n",
+    "        'cloudScoreRange': LS_CLOUD_SCORE_RANGE,\n",
+    "        'asFloat': True,\n",
+    "        'maxDepth': 200\n",
+    "    })\n",
+    "    ct = collection.count()\n",
+    "    return imgLS\n",
+    "\n",
+    "def landsatSummary_YearRange(yrFrom, yrTo, lsCollection, emisCollection):\n",
+    "    # return a single image representing all the data falling within the range of years given\n",
     "    # get the relevant year(s) data from the imagecollection\n",
     "    periodFilter = ee.Filter.calendarRange(yrFrom,yrTo,\"year\")\n",
-    "    periodLS = ls8_filteredToRegion.filter(periodFilter);\n",
+    "    #periodLS = ls8_filteredToRegion.filter(periodFilter)\n",
+    "    periodLS = collection.filter(periodFilter)\n",
     "    # calculate the indices for the years specified, using the built-in simple composite \n",
     "    # function to select the best cloud free value at each pixel from the available images\n",
     "    # occurring within the specified year range\n",
-    "    imgLS = ee.Algorithms.Landsat.simpleComposite(**{\n",
-    "      'collection': periodLS,\n",
-    "      'percentile': LS_CLOUD_PERCENTILE,\n",
-    "      'cloudScoreRange': LS_CLOUD_SCORE_RANGE,\n",
-    "      'asFloat':True,\n",
-    "      'maxDepth':200\n",
-    "    }).addBands(ee.Image(emisOnly.filter(periodFilter).mean()))\n",
-    "    yearBest = calcIndices(imgLS)\n",
-    "    return yearBest\n",
+    "    lsComposite = landsatComposite(periodLS).addBands(\n",
+    "        ee.Image(emisCollection.filter(periodFilter).mean())\n",
+    "    )\n",
+    "    indices = calcIndices(lsComposite)\n",
+    "    return indices\n",
     "\n",
+    "def landsatSummary_Monthly(yr, lsCollection, emisCollection):\n",
+    "    # return 12 images for the months of the specified year\n",
+    "    yearFilter = ee.Filter.calendarRange(yr, yr, \"year\")\n",
+    "    yearLS = lsCollection.filter(yearFilter)\n",
+    "    yearEmis = emisCollection.filter(yearFilter)\n",
+    "    monthNums = ee.List.sequence(1, 12, 1)\n",
+    "    summariser = landsatSummaryBuilder_CalendarMonth(yearLS, yearEmis)\n",
+    "    monthImgs = monthNums.map(summariser)\n",
+    "    return ee.ImageCollection(monthImgs)\n",
+    "    \n",
+    "def landsatSummaryBuilder_CalendarMonth(lsCollection, emisCollection):\n",
+    "    def summary_TheseColls(month):\n",
+    "        periodFilter = ee.Filter.calendarRange(month, month, \"month\")\n",
+    "        periodLS = lsCollection.filter(periodFilter)\n",
+    "        lsComposite = landsatComposite(periodLS).addBands(\n",
+    "            ee.Image(emisCollection.filter(periodFilter).mean())\n",
+    "        )    \n",
+    "        indices = calcIndices(lsComposite).set('month_start',month).set('month_end',month)\n",
+    "        return ee.Image(indices)\n",
+    "    return summary_TheseColls\n",
+    "\n",
+    "def landsatSummaryBuilder_CalendarMonthRange(lsCollection, emisCollection):\n",
+    "    def summary_TheseColls(monthFrom, monthTo):\n",
+    "        if not isinstance(monthTo,int):\n",
+    "            print(\"using single month \")\n",
+    "            monthTo = monthFrom\n",
+    "        else:\n",
+    "            print(\"using range of months {}-{}\".format(monthFrom,monthTo))\n",
+    "        periodFilter = ee.Filter.calendarRange(monthFrom, monthTo, \"month\")\n",
+    "        periodLS = lsCollection.filter(periodFilter)\n",
+    "        lsComposite = landsatComposite(periodLS).addBands(\n",
+    "            ee.Image(emisCollection.filter(periodFilter).mean())\n",
+    "        )    \n",
+    "        indices = (calcIndices(lsComposite)\n",
+    "                   .set('month_start', monthFrom)\n",
+    "                   .set('month_end', monthTo)\n",
+    "                  )\n",
+    "        return ee.Image(indices)\n",
+    "    return summary_TheseColls\n",
+    "\n",
+    "def landsatSummary_Seasonal(yrFrom, yrTo, lsCollection, emisCollection):\n",
+    "    yearFilter = ee.Filter.calendarRange(yrFrom, yrTo, \"year\")\n",
+    "    periodLS = lsCollection.filter(yearFilter)\n",
+    "    periodEmis = emisCollection.filter(yearFilter)\n",
+    "    summariser = landsatSummaryBuilder_CalendarMonthRange(periodLS, periodEmis)\n",
+    "    springLS = summariser(4, 6)\n",
+    "    summerLS = summariser(7, 9)\n",
+    "    autumnLS = summariser(10, 12)\n",
+    "    winterLS = summariser(1, 3)\n",
+    "\n",
+    "    seasonalMean = ee.ImageCollection.fromImages([springLS, summerLS, autumnLS, winterLS]).mean()\n",
+    "    return seasonalMean\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly = landsatSummary_Monthly(2017, ls8_filteredToRegion, emisOnly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly.size().getInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Function to calculate a seasonally-balanced annual mean image from the landsat 8 image stack.\n",
     "# The returned image is comprised of a mean of 4 seasonal (spring, summer, autumn, winter) images,\n",
     "# where each of those 4 images is generated using the simple cloud-avoiding compositor function for \n",
@@ -1049,15 +1091,13 @@
     "    seasonalBest = (ee.ImageCollection\n",
     "    .fromImages([springBest,summerBest,autumnBest,winterBest])\n",
     "    .mean());\n",
-    "    return seasonalBest;\n"
+    "    return seasonalBest;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# call the export routine; same function whichever way we are defining the output size\n",
@@ -1082,10 +1122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def runDynamicExportsForPeriod(yrFrom, yrTo, seasonal=True):\n",
@@ -1156,10 +1194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "TASKLIST = []\n",
@@ -1198,10 +1234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#TASKLIST = []\n",
@@ -1222,10 +1256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1238,15 +1270,7 @@
       "HTI-ndvi-2017-exp\n",
       "HTI-lsTemp10-2017-exp\n",
       "HTI-lsTemp11-2017-exp\n",
-      "HTI-chirps-2017-exp\n",
-      "HTI-tcb-2018-exp\n",
-      "HTI-tcw-2018-exp\n",
-      "HTI-tcg-2018-exp\n",
-      "HTI-evi-2018-exp\n",
-      "HTI-ndvi-2018-exp\n",
-      "HTI-lsTemp10-2018-exp\n",
-      "HTI-lsTemp11-2018-exp\n",
-      "HTI-chirps-2018-exp\n"
+      "HTI-chirps-2017-exp\n"
      ]
     }
    ],
@@ -1265,9 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1322,9 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
